refactor workspace authorization model