@@ -4,11 +4,12 @@ import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.songhg.firefly.iot.common.context.AppContextHolder;
+import com.songhg.firefly.iot.common.enums.RoleStatus;
 import com.songhg.firefly.iot.common.enums.UserStatus;
 import com.songhg.firefly.iot.common.enums.UserType;
 import com.songhg.firefly.iot.common.exception.BizException;
-import com.songhg.firefly.iot.common.mybatis.DataScope;
 import com.songhg.firefly.iot.common.result.ResultCode;
+import com.songhg.firefly.iot.system.convert.UserConvert;
 import com.songhg.firefly.iot.system.dto.user.UserCreateDTO;
 import com.songhg.firefly.iot.system.dto.user.UserOptionVO;
 import com.songhg.firefly.iot.system.dto.user.UserQueryDTO;
@@ -17,20 +18,22 @@ import com.songhg.firefly.iot.system.dto.user.UserVO;
 import com.songhg.firefly.iot.system.entity.Role;
 import com.songhg.firefly.iot.system.entity.User;
 import com.songhg.firefly.iot.system.entity.UserRole;
-import com.songhg.firefly.iot.system.convert.UserConvert;
 import com.songhg.firefly.iot.system.mapper.RoleMapper;
 import com.songhg.firefly.iot.system.mapper.UserMapper;
 import com.songhg.firefly.iot.system.mapper.UserRoleMapper;
 import lombok.RequiredArgsConstructor;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -45,15 +48,10 @@ public class UserService {
 
     @Transactional
     public UserVO createUser(UserCreateDTO dto) {
-        Long tenantId = AppContextHolder.getTenantId();
-        if (tenantId == null) {
-            throw new BizException(ResultCode.PARAM_ERROR, "tenant context required");
-        }
-
+        Long tenantId = requireTenantId();
         User operator = userDomainService.requireCurrentUser();
         UserType userType = resolveCreatedUserType(dto.getUserType(), tenantId, operator);
 
-        // Check uniqueness
         Long count = userMapper.selectCount(new LambdaQueryWrapper<User>()
                 .eq(User::getUsername, dto.getUsername())
                 .isNull(User::getDeletedAt));
@@ -71,49 +69,24 @@ public class UserService {
         user.setPasswordHash(passwordEncoder.encode(rawPassword));
         user.setPasswordChangedAt(LocalDateTime.now());
         user.setCreatedBy(operator.getId());
-
         userMapper.insert(user);
 
-        // Assign roles
-        if (dto.getRoles() != null) {
-            for (UserCreateDTO.UserRoleDTO roleDTO : dto.getRoles()) {
-                ensureRoleInTenant(roleDTO.getRoleId(), tenantId);
-                UserRole ur = new UserRole();
-                ur.setUserId(user.getId());
-                ur.setRoleId(roleDTO.getRoleId());
-                ur.setProjectId(roleDTO.getProjectId());
-                ur.setCreatedAt(LocalDateTime.now());
-                userRoleMapper.insert(ur);
-            }
-        }
+        replaceUserRoles(user.getId(), tenantId, dto.getRoles());
 
         log.info("User created: id={}, username={}, tenantId={}", user.getId(), user.getUsername(), tenantId);
-        return UserConvert.INSTANCE.toVO(user);
+        return enrichUserVO(user);
     }
 
     public UserVO getUserById(Long id) {
-        User user = userMapper.selectOne(
-                new LambdaQueryWrapper<User>()
-                        .select(User::getId, User::getTenantId, User::getUsername, User::getPhone,
-                                User::getEmail, User::getAvatarUrl, User::getRealName, User::getUserType, User::getStatus)
-                        .eq(User::getId, id)
-                        .isNull(User::getDeletedAt)
-                        .last("LIMIT 1"));
-        if (user == null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
-        requireUserType(user);
-        UserVO result = UserConvert.INSTANCE.toVO(user);
-        result.setTenantSuperAdmin(userDomainService.isTenantSuperAdmin(user.getId(), user.getTenantId()));
-        result.setWorkspaceMenuAdmin(
-                userDomainService.isPlatformSuperAdmin(user.getId())
-                        || userDomainService.isTenantSuperAdmin(user.getId(), user.getTenantId()));
-        return result;
+        User user = requireUserInCurrentTenant(id);
+        return enrichUserVO(user);
     }
 
-    @DataScope(createdByColumn = "created_by")
     public IPage<UserVO> listUsers(UserQueryDTO query) {
+        Long tenantId = requireTenantId();
+
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(User::getTenantId, tenantId);
         if (query.getKeyword() != null && !query.getKeyword().isBlank()) {
             wrapper.and(w -> w.like(User::getUsername, query.getKeyword())
                     .or().like(User::getRealName, query.getKeyword())
@@ -122,74 +95,65 @@ public class UserService {
         if (query.getStatus() != null) {
             wrapper.eq(User::getStatus, query.getStatus());
         }
+        if (query.getRoleId() != null) {
+            List<Long> matchedUserIds = userRoleMapper.selectList(new LambdaQueryWrapper<UserRole>()
+                            .eq(UserRole::getRoleId, query.getRoleId()))
+                    .stream()
+                    .map(UserRole::getUserId)
+                    .distinct()
+                    .toList();
+            if (matchedUserIds.isEmpty()) {
+                Page<UserVO> empty = new Page<>(query.getPageNum(), query.getPageSize());
+                empty.setRecords(List.of());
+                empty.setTotal(0);
+                return empty;
+            }
+            wrapper.in(User::getId, matchedUserIds);
+        }
         wrapper.isNull(User::getDeletedAt);
         wrapper.orderByDesc(User::getCreatedAt);
 
         Page<User> page = new Page<>(query.getPageNum(), query.getPageSize());
         IPage<User> result = userMapper.selectPage(page, wrapper);
-        return result.convert(UserConvert.INSTANCE::toVO);
+
+        Map<Long, List<UserVO.UserRoleVO>> roleMap = buildUserRoleMap(
+                result.getRecords().stream().map(User::getId).toList());
+        return result.convert(user -> toUserVO(user, roleMap.getOrDefault(user.getId(), List.of())));
     }
 
     @Transactional
     public UserVO updateUser(Long id, UserUpdateDTO dto) {
-        User user = userMapper.selectById(id);
-        if (user == null || user.getDeletedAt() != null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
+        User user = requireUserInCurrentTenant(id);
         UserConvert.INSTANCE.updateEntity(dto, user);
         userMapper.updateById(user);
-        return UserConvert.INSTANCE.toVO(user);
+        return enrichUserVO(user);
     }
 
     @Transactional
     public void updateUserStatus(Long id, UserStatus status) {
-        User user = userMapper.selectById(id);
-        if (user == null || user.getDeletedAt() != null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
+        User user = requireUserInCurrentTenant(id);
         user.setStatus(status);
         userMapper.updateById(user);
     }
 
     @Transactional
     public void deleteUser(Long id) {
-        User user = userMapper.selectById(id);
-        if (user == null || user.getDeletedAt() != null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
+        User user = requireUserInCurrentTenant(id);
         user.setStatus(UserStatus.DISABLED);
         userMapper.updateById(user);
+        userRoleMapper.delete(new LambdaQueryWrapper<UserRole>().eq(UserRole::getUserId, user.getId()));
         userMapper.deleteById(user.getId());
     }
 
     @Transactional
     public void assignRoles(Long userId, List<UserCreateDTO.UserRoleDTO> roles) {
-        User user = userMapper.selectById(userId);
-        if (user == null || user.getDeletedAt() != null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
-        // Remove existing roles
-        userRoleMapper.delete(new LambdaQueryWrapper<UserRole>().eq(UserRole::getUserId, userId));
-        // Insert new roles
-        if (roles != null) {
-            for (UserCreateDTO.UserRoleDTO roleDTO : roles) {
-                ensureRoleInTenant(roleDTO.getRoleId(), user.getTenantId());
-                UserRole ur = new UserRole();
-                ur.setUserId(userId);
-                ur.setRoleId(roleDTO.getRoleId());
-                ur.setProjectId(roleDTO.getProjectId());
-                ur.setCreatedAt(LocalDateTime.now());
-                userRoleMapper.insert(ur);
-            }
-        }
+        User user = requireUserInCurrentTenant(userId);
+        replaceUserRoles(userId, user.getTenantId(), roles);
     }
 
     @Transactional
     public void resetPassword(Long id, String newPassword) {
-        User user = userMapper.selectById(id);
-        if (user == null || user.getDeletedAt() != null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
+        User user = requireUserInCurrentTenant(id);
         user.setPasswordHash(passwordEncoder.encode(newPassword));
         user.setPasswordChangedAt(LocalDateTime.now());
         userMapper.updateById(user);
@@ -197,10 +161,7 @@ public class UserService {
 
     @Transactional
     public void changePassword(Long userId, String oldPassword, String newPassword) {
-        User user = userMapper.selectById(userId);
-        if (user == null || user.getDeletedAt() != null) {
-            throw new BizException(ResultCode.USER_NOT_FOUND);
-        }
+        User user = requireUserInCurrentTenant(userId);
         if (!passwordEncoder.matches(oldPassword, user.getPasswordHash())) {
             throw new BizException(ResultCode.PARAM_ERROR, "旧密码不正确");
         }
@@ -210,22 +171,21 @@ public class UserService {
     }
 
     public List<UserCreateDTO.UserRoleDTO> getUserRoles(Long userId) {
-        List<UserRole> roles = userRoleMapper.selectList(
-                new LambdaQueryWrapper<UserRole>().eq(UserRole::getUserId, userId));
-        return roles.stream().map(ur -> {
-            UserCreateDTO.UserRoleDTO dto = new UserCreateDTO.UserRoleDTO();
-            dto.setRoleId(ur.getRoleId());
-            dto.setProjectId(ur.getProjectId());
-            return dto;
-        }).collect(Collectors.toList());
+        User user = requireUserInCurrentTenant(userId);
+        return userRoleMapper.selectList(
+                        new LambdaQueryWrapper<UserRole>().eq(UserRole::getUserId, user.getId()))
+                .stream()
+                .map(userRole -> {
+                    UserCreateDTO.UserRoleDTO dto = new UserCreateDTO.UserRoleDTO();
+                    dto.setRoleId(userRole.getRoleId());
+                    dto.setProjectId(userRole.getProjectId());
+                    return dto;
+                })
+                .toList();
     }
 
     public List<UserOptionVO> listSelectableUsers() {
-        Long tenantId = AppContextHolder.getTenantId();
-        if (tenantId == null || tenantId <= 0) {
-            throw new BizException(ResultCode.PARAM_ERROR, "tenant context required");
-        }
-
+        Long tenantId = requireTenantId();
         return userMapper.selectList(new LambdaQueryWrapper<User>()
                         .select(User::getUsername, User::getRealName, User::getPhone, User::getEmail, User::getStatus)
                         .eq(User::getTenantId, tenantId)
@@ -245,6 +205,67 @@ public class UserService {
                 })
                 .filter(option -> Objects.nonNull(option.getUsername()))
                 .toList();
+    }
+
+    private void replaceUserRoles(Long userId, Long tenantId, List<UserCreateDTO.UserRoleDTO> roles) {
+        userRoleMapper.delete(new LambdaQueryWrapper<UserRole>().eq(UserRole::getUserId, userId));
+        if (roles == null || roles.isEmpty()) {
+            return;
+        }
+        for (UserCreateDTO.UserRoleDTO roleDTO : roles) {
+            ensureRoleInTenant(roleDTO.getRoleId(), tenantId);
+            UserRole userRole = new UserRole();
+            userRole.setUserId(userId);
+            userRole.setRoleId(roleDTO.getRoleId());
+            userRole.setProjectId(roleDTO.getProjectId());
+            userRole.setCreatedAt(LocalDateTime.now());
+            userRoleMapper.insert(userRole);
+        }
+    }
+
+    private UserVO enrichUserVO(User user) {
+        Map<Long, List<UserVO.UserRoleVO>> roleMap = buildUserRoleMap(List.of(user.getId()));
+        return toUserVO(user, roleMap.getOrDefault(user.getId(), List.of()));
+    }
+
+    private Map<Long, List<UserVO.UserRoleVO>> buildUserRoleMap(List<Long> userIds) {
+        if (userIds == null || userIds.isEmpty()) {
+            return Map.of();
+        }
+
+        List<UserRole> userRoles = userRoleMapper.selectList(
+                new LambdaQueryWrapper<UserRole>().in(UserRole::getUserId, userIds));
+        if (userRoles.isEmpty()) {
+            return Map.of();
+        }
+
+        Map<Long, Role> roleMap = roleMapper.selectBatchIds(
+                        userRoles.stream().map(UserRole::getRoleId).distinct().toList())
+                .stream()
+                .collect(Collectors.toMap(Role::getId, role -> role));
+
+        Map<Long, List<UserVO.UserRoleVO>> result = new LinkedHashMap<>();
+        for (UserRole userRole : userRoles) {
+            Role role = roleMap.get(userRole.getRoleId());
+            if (role == null) {
+                continue;
+            }
+            UserVO.UserRoleVO roleVO = new UserVO.UserRoleVO();
+            roleVO.setRoleId(role.getId());
+            roleVO.setRoleCode(role.getCode());
+            roleVO.setRoleName(role.getName());
+            roleVO.setProjectId(userRole.getProjectId());
+            result.computeIfAbsent(userRole.getUserId(), ignored -> new ArrayList<>()).add(roleVO);
+        }
+        return result;
+    }
+
+    private UserVO toUserVO(User user, List<UserVO.UserRoleVO> roles) {
+        requireUserType(user);
+        UserVO result = UserConvert.INSTANCE.toVO(user);
+        result.setRoles(roles);
+        result.setTenantSuperAdmin(userDomainService.isTenantSuperAdmin(user.getId(), user.getTenantId()));
+        return result;
     }
 
     private String generateRandomPassword() {
@@ -295,6 +316,28 @@ public class UserService {
         if (!tenantId.equals(role.getTenantId())) {
             throw new BizException(ResultCode.PERMISSION_DENIED, "role does not belong to current tenant");
         }
+        if (role.getStatus() == RoleStatus.DISABLED) {
+            throw new BizException(ResultCode.PERMISSION_DENIED, "role is disabled");
+        }
     }
 
+    private User requireUserInCurrentTenant(Long userId) {
+        User user = userMapper.selectById(userId);
+        if (user == null || user.getDeletedAt() != null) {
+            throw new BizException(ResultCode.USER_NOT_FOUND);
+        }
+        Long tenantId = requireTenantId();
+        if (!tenantId.equals(user.getTenantId())) {
+            throw new BizException(ResultCode.PERMISSION_DENIED, "user does not belong to current tenant");
+        }
+        return user;
+    }
+
+    private Long requireTenantId() {
+        Long tenantId = AppContextHolder.getTenantId();
+        if (tenantId == null || tenantId <= 0) {
+            throw new BizException(ResultCode.PARAM_ERROR, "tenant context required");
+        }
+        return tenantId;
+    }
 }
